[package]
name = "morp"
version = "0.1.0"
authors = ["Elie Genard <elaye.github.io@gmail.com>"]
edition = "2018"
description = "Utilities for javascript monorepos"
homepage = "https://github.com/elaye/morp"
repository = "https://github.com/elaye/morp"
license = "MIT"
readme = "README.md"
keywords = ["monorepo", "javascript", "utilities"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
serde = "^1.0.0"
serde_derive = "^1.0.0"
serde_json = "^1.0.0"
clap = "^2.32.0"
petgraph = "0.4.13"
git2 = "0.8.0"
regex = "1.1.0"
